edit users in progress

--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -1,3 +1,4 @@
 @import "./Login.scss";
 @import "./components/Navbar.scss";
 @import "./components/UsersTable.scss";
+@import "./components/Modal.scss";
